force-app/main/default/objects/Student_Application__c/Student_Application__c.object-meta.xml
<CustomObject>
    <description>This is a student application object which having various field required for student application form</description>
    <label>Student Application</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>