force-app/main/default/objects/Student_Application__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>This field contain the age</description>
    <formula>FLOOR((TODAY() - Date_of_Birth__c ) / 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>age of student</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>