force-app/main/default/objects/Student_Application__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City where the student lives.</description>
    <inlineHelpText>Select your city from the list based on your state.</inlineHelpText>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Nashik</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Kolhapur</fullName>
            </value>
            <value>
                <fullName>Varanasi</fullName>
            </value>
            <value>
                <fullName>Prayagraaj</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Ujjain</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Udaipur</fullName>
            </value>
            <value>
                <fullName>Jodhpur</fullName>
            </value>
            <value>
                <fullName>Surat</fullName>
            </value>
            <value>
                <fullName>Rajkot</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Vellore</fullName>
            </value>
            <value>
                <fullName>Ooty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>