force-app/main/default/objects/Student_Application__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <description>Specific course the student is applying for.</description>
    <inlineHelpText>Select the course to apply</inlineHelpText>
    <label>Courses</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stream__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>B. Com</fullName>
            </value>
            <value>
                <fullName>M. Com</fullName>
            </value>
            <value>
                <fullName>B.Sc.</fullName>
            </value>
            <value>
                <fullName>M.Sc.</fullName>
            </value>
            <value>
                <fullName>B.E.</fullName>
            </value>
            <value>
                <fullName>B. Tech</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>