force-app/main/default/objects/Student_Application__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Student’s date of birth</description>
    <inlineHelpText>Select your birth date from the calendar</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>