force-app/main/default/objects/Student_Application__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Student’s personal or official email address.</description>
    <inlineHelpText>Enter a valid email address</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>