force-app/main/default/objects/Student_Application__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>This field contains the last name of student</description>
    <inlineHelpText>last name of student</inlineHelpText>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>