force-app/main/default/objects/Student_Application__c/fields/Native_Language__c.field-meta.xml
<CustomField>
    <fullName>Native_Language__c</fullName>
    <description>This  filed auto populate the Native  language according to the state</description>
    <formula>CASE(
  State__c,
  &quot;Maharashtra&quot;, &quot;Marathi&quot;,
  &quot;Uttar Pradesh&quot;, &quot;Hindi&quot;,
  &quot;Madhya Pradesh&quot;, &quot;Hindi&quot;,
  &quot;Rajasthan&quot;, &quot;Hindi&quot;,
  &quot;Gujarat&quot;, &quot;Gujarati&quot;,
  &quot;Tamil Nadu&quot;, &quot;Tamil&quot;,
  &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Native langugae</inlineHelpText>
    <label>Native Language</label>
    <type>Text</type>
</CustomField>