force-app/main/default/objects/Student_Application__c/fields/Obtained_Marks__c.field-meta.xml
<CustomField>
    <fullName>Obtained_Marks__c</fullName>
    <description>The obtained marks</description>
    <inlineHelpText>The obtained marks</inlineHelpText>
    <label>Obtained Marks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>