force-app/main/default/objects/Student_Application__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>The percentage of the student calculated from obtained marks</description>
    <formula>( Obtained_Marks__c / 100) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>percentage of the student</inlineHelpText>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>