force-app/main/default/objects/Student_Application__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Student’s mobile contact number.</description>
    <inlineHelpText>Enter a valid 10-digit mobile number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>