force-app/main/default/objects/Student_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field contains the status of  student which is active or partially active</description>
    <inlineHelpText>Status of the employee</inlineHelpText>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>